Fixed some layout issues.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,11 +8,6 @@
   justify-content: center;
   z-index: 100;
   background: none;
-}
-
-header .block {
-  position: relative;
-  width: 100vw;
   background-color: #fff;
   padding-top: 5px;
 }
